fix enemies behind screen

--- a/style.css
+++ b/style.css
@@ -38,17 +38,8 @@ button {
 p {
   position: absolute;
 }
-#enemy0,
-#enemy1,
-#enemy2,
-#enemy3,
-#enemy4,
-#enemy5,
-#enemy6,
-#enemy7,
-#enemy8,
-#enemy9,
-#enemy10 {
+
+.enemy{
   position: absolute;
 }
 
